--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList">
 
-        <!-- DELETE LATER  -->
+        <!--TODO: DELETE LATER -->
         <activity
             android:name=".TestActivity"
             android:label="@string/title_activity_test"
             android:theme="@style/Theme.ShoppingList.NoActionBar">
         </activity>
-        <!-- -->
-        
-        <activity android:name=".MainActivity">
+        <!--  -->
+
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ShoppingList.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +28,35 @@
             </intent-filter>
         </activity>
 
+        <!-- BEGIN STOCK -->
         <activity
-            android:name=".StockListActivity"
+            android:name=".stocks_activities.StockListActivity"
             android:label="@string/title_activity_stock_list"
-            android:theme="@style/Theme.ShoppingList.NoActionBar"></activity>
+            android:theme="@style/Theme.ShoppingList.NoActionBar" />
+        <!-- END STOCK -->
+
+        <!-- BEGIN SHOPPING LIST -->
+        <activity
+            android:name=".shoppinglists_activities.ShoppingListListActivity"
+            android:label="@string/shopping_lists"
+            android:theme="@style/Theme.ShoppingList.NoActionBar"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".shoppinglists_activities.ShoppingListActivity"
+            android:label="@string/shopping_list"
+            android:theme="@style/Theme.ShoppingList.NoActionBar"
+            android:parentActivityName=".shoppinglists_activities.ShoppingListListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".shoppinglists_activities.ShoppingListListActivity" />
+
+        </activity>
+        <!-- END SHOPPING LIST -->
 
     </application>
 
