--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList">
-        <activity android:name=".stocks_activities.StockActivity"></activity>
         <!-- TODO: DELETE LATER -->
         <activity
             android:name=".TestActivity"
             android:label="@string/title_activity_test"
-            android:theme="@style/Theme.ShoppingList.NoActionBar" /> <!--  -->
+            android:theme="@style/Theme.ShoppingList.NoActionBar" />
+        <!--  -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -24,35 +24,31 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- BEGIN STOCK LIST -->
-        <activity
-            android:name=".stocks_activities.StockListActivity"
-            android:label="@string/title_activity_stock_list"
-            android:theme="@style/Theme.ShoppingList.NoActionBar">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
         </activity>
-        <!-- END STOCK LIST -->
-        <!-- BEGIN SHOPPING LIST -->
+
+        <!-- BEGIN STOCK -->
         <activity
-            android:name=".shoppinglists_activities.ShoppingListListActivity"
-            android:label="@string/shopping_lists"
+            android:name=".stocks_activities.StockActivity"
+            android:label="@string/title_activity_stock_list"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.ShoppingList.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <!-- END STOCK -->
+
+        <!-- BEGIN SHOPPING LIST -->
         <activity
             android:name=".shoppinglists_activities.ShoppingListActivity"
             android:label="@string/shopping_list"
-            android:parentActivityName=".shoppinglists_activities.ShoppingListListActivity"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.ShoppingList.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".shoppinglists_activities.ShoppingListListActivity" />
+                android:value=".MainActivity" />
         </activity>
+        <!-- END SHOPPING LIST -->
     </application>
 
 </manifest>
