--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList">
-        <!-- TODO: DELETE LATER -->
-        <activity
-            android:name=".TestActivity"
-            android:label="@string/title_activity_test"
-            android:theme="@style/Theme.ShoppingList.NoActionBar" />
-        <!--  -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -25,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".app_error_handling.FatalAppErrorActivity"
+            android:theme="@style/Theme.ShoppingList.NoActionBar" />
 
         <!-- BEGIN STOCK -->
         <activity
