--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.ShoppingList">
+        android:supportsRtl="true">
+        <!--android:theme="@style/Theme.ShoppingList">-->
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
