--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.ShoppingList">
         <!--android:theme="@style/Theme.ShoppingList">-->
 
         <activity
@@ -58,10 +59,9 @@
                 android:value=".MainActivity" />
         </activity>
 
-        <!-- TODO: label -->
         <activity
             android:name=".go_shopping.GoShoppingActivity"
-            android:label="@string/shopping_list"
+            android:label="@string/shopping"
             android:parentActivityName=".product_list_class.shopping_list.ShoppingListActivity"
             android:theme="@style/Theme.ShoppingList.NoActionBar">
             <meta-data
@@ -69,10 +69,9 @@
                 android:value=".product_list_class.shopping_list.ShoppingListActivity" />
         </activity>
 
-        <!-- TODO: label -->
         <activity
             android:name=".shopping_summary.ShoppingSummaryActivity"
-            android:label="@string/shopping_list"
+            android:label="@string/shopping_summary"
             android:parentActivityName=".go_shopping.GoShoppingActivity"
             android:theme="@style/Theme.ShoppingList.NoActionBar">
             <meta-data
